# ascesis

./: Cargo.toml  README.md  build.rs  cargo-check-updates
examples/: describe.rs  rex.rs  solve.rs
examples/scripts/: arrow-sequence-six.ces  arrow-sequence-two.ces  arrow.ces  bridge-bad.ces  bridge-good.ces  choice-five.ces  choice-six.ces  choice-three.ces  choice-two.ces  fork-six.ces  independent-arrows-six.ces  test-absorption.ces  test-capacities.ces  test-coherence.ces  test-weights.ces
spec/: ascesis-syntax.ebnf  ascetic-macros.md  cesar-macros.md  cesar-syntax.ebnf  cesar.ebnf  implementation-notes.md  lexer-implementation.md  parser-implementation.md
src/: ascesis_grammar.bnf  ascesis_parser.lalrpop  axiom.rs  bnf.rs  bnf_grammar.lalrpop  bnf_parser.lalrpop  ces.rs  cesar.lalrpop  cesar_grammar.bnf  cesar_grammar.lalrpop  cesar_parser.lalrpop  content.rs  context.rs  domain.rs  error.rs  grammar.rs  lex.rs  lexer.rs  lib.rs  node.rs  polynomial.rs  rex.rs  sentence.rs
