[workspace]

[package]

name = "ascesis"
version = "0.0.2"
description = "A language for analysis and synthesis of cause-effect synchronised interacting systems"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascesis"
readme = "README.md"

build = "build.rs"

[dependencies]

log = "0.4"
fern = { version = "0.5", features = ["colored"] }
clap = "2.33"
regex = "1.3"
lazy_static = "1.4"
rand = "0.7"
enquote = "1.0"
lalrpop-util = "0.17"
# aces = { path = "../aces" }
# aces = { git = "https://github.com/k7f/aces", rev = "2179e24" }
aces = "0.0.9"

[build-dependencies]

lalrpop = "0.17"
