[workspace]

[package]

name = "ascesis"
version = "0.0.6"
description = "A language for analysis and synthesis of cause-effect synchronised interacting systems"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascesis"
readme = "README.md"

build = "build.rs"

[dependencies]

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
clap = "2.33"
regex = "1.3"
lazy_static = "1.4"
rand = "0.7"
enquote = "1.0"
logos = "0.11.0-rc5"
lalrpop-util = "0.18"
# aces = { path = "../aces" }
aces = "0.0.13"

[build-dependencies.lalrpop]

version = "0.18"
features = ["lexer"]
